# finally-logical

./: README.md  finally-logical.cabal
src/: Test.hs
src/Data/Logic/: Atomic.hs  Boolean.hs  CNF.hs  Decidable.hs  Embed.hs  Modal.hs  Propositional.hs  Render.hs  Substitution.hs  Util.hs
src/Data/Logic/Atomic/: Class.hs
src/Data/Logic/Boolean/: Class.hs
src/Data/Logic/Modal/: Class.hs
src/Data/Logic/Propositional/: Class.hs
