name:                finally-logical
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Logic.Atomic
                       Data.Logic.Atomic.Class
                       Data.Logic.Boolean
                       Data.Logic.Boolean.Class
                       Data.Logic.Decidable
                       Data.Logic.Embed
                       Data.Logic.Modal
                       Data.Logic.Modal.Class
                       Data.Logic.Propositional
                       Data.Logic.Propositional.Class
                       Data.Logic.Util
                       ----
                       Data.Logic.Render
                       Data.Logic.CNF
                       ----
                       Test
                       -- Data.Logic.Substitution
  build-depends:       base >=4.7 && <4.8
                     , containers
                     , transformers
                     , mtl
                     , QuickCheck
                     , pretty-show
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
